css/style.css
/* ... */
.ft-copyright {
  overflow: hidden;
  display: block;
}

.ft-sponsor {
  padding-left: .25em;
  width: 180px;
  margin: auto 0;
}

.copyright {
  display: block;
  text-align: center;
  text-transform: uppercase;
  margin: 0;
  font-size: 13px;
  line-height: 1.3000rem;
}

.thanks {
  display: block;
  text-align: center;
  text-transform: uppercase;
  margin: 0;
}

.sponsors {
  display: inline-block;
}

.sponsor-center {
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  padding-top: 0.7000rem;
}

@media only screen and (min-width: 60em) {
  .sponsor-center {
    padding-top: 0;
  }
}

.bts-bg {
  background-color: rgba(166, 165, 167, 0.5);
}

.bts-embed__item {
  position: absolute;
  left: 0;
  width: 100%;
  height: 100%;
  top: 0;
  padding: 0;
}

.bts-title {
  color: #000;
  font-size: 1.5em;
  text-transform: uppercase;
  margin-bottom: 1em;
}

.bts-more-btn {
  margin-top: 1em;
  display: block;
  text-transform: uppercase;
  padding: 1em;
  color: #fff;
  background-color: rgba(85, 86, 90, 0.7);
  text-decoration: none;
  text-align: center;
}

.bts-more-btn:hover {
  color: #fff;
  background-color: rgba(0, 162, 156, 0.7);
  transition: all 300ms ease-in-out;
}

.bts-text {
  font-size: 1em;
  padding-top: 1em;
  margin-bottom: 0;
  padding-right: 1em;
}

.fw-info-holder {
  padding: 2em;
  background-color: #55565a;
  color: #fff;
}

@media only screen and (min-width: 80em) {
  .fw-info-holder {
    display: none;
    visibility: hidden;
  }
}

.fw-info-holder h2 {
  text-transform: uppercase;
  font-weight: normal;
}

.fw-info-holder .fw-info-date {
  font-weight: bold;
}

.fw-info-holder .fw-info-time {
  margin-bottom: 1em;
}

.fw-info-holder .fw-info-venue {
  font-weight: bold;
}

.fw-info-holder .fw-info-address {
  font-size: 14px;
  color: #DCDBDB;
}

.fw-info-holder .fw-info-address:hover {
  color: #c3c1c1;
  text-decoration: underline;
}

.fw-info-holder .fw-info-address a {
  text-decoration: none;
}

.fw-info-sec1 {
  padding-right: .5em;
  float: left;
}

.fw-info-sec2 {
  padding-right: .5em;
  color: #DCDBDB;
  float: left;
}

.fw-info-sec3 {
  float: left;
  padding-top: 2em;
  margin-top: 2em;
  margin-right: 0;
  margin-left: 0;
  text-align: center;
  text-decoration: none;
}

@media only screen and (min-width: 38em) {
  .fw-info-sec3 {
    margin-top: 0;
  }
}

.fw-info-sec3 button {
  text-align: center;
  background-color: transparent;
  border: 1px solid #fff;
  color: #fff;
  padding: .75em 1.5em;
  font-size: 1em;
  text-transform: uppercase;
}

.fw-info-sec3 button:hover {
  background-color: #3c3d40;
}

.fw-info-sec3 button:active {
  background-color: #232426;
}

.fw-link-center {
  display: block;
  text-transform: uppercase;
  padding: 1em;
  color: #fff;
  background-color: rgba(0, 162, 156, 0.7);
  text-decoration: none;
}

.fw-link-center:hover {
  color: #fff;
  background-color: #00a29c;
  transition: all 300ms ease-in-out;
}

@media only screen and (min-width: 80em) {
  .fw-link-center {
    margin-top: 1em;
  }
}

.ticket-button {
  float: left;
}

.nf-404 {
  color: rgba(0, 0, 0, 0.1);
  font-size: 5em;
}

.nf-down {
  margin-top: 2em;
}

.nf-center {
  text-align: center;
}

.nf-title {
  font-size: 1.6018rem;
  line-height: 2.1000rem;
  color: #55565a;
  font-weight: bold;
}

.nf-subtitle {
  color: #A6A5A7;
}

.nf-btn {
  display: inline-block;
  margin: 0;
  background-color: transparent;
  border: 1px solid #DCDBDB;
  color: #55565a;
  padding: .5em 1em;
  margin: 1.5em;
  box-shadow: 2px 2px #DCDBDB;
}

.nf-btn a {
  text-decoration: none;
  color: #55565a;
}

.nf-btn:hover {
  background-color: rgba(0, 0, 0, 0.05);
  box-shadow: inset 2px 2px 0 0 #DCDBDB;
}

.nf-btn:active {
  background-color: #DCDBDB;
  border: 2px solid #DCDBDB;
}

.nf-max {
  max-width: 65%;
  margin: 0 auto;
}

.nf-fadeIn {
  -webkit-animation-name: nf-fadeIn;
  animation-name: nf-fadeIn;
  -webkit-animation-duration: 2s;
          animation-duration: 2s;
  -webkit-animation-delay: .5s;
          animation-delay: .5s;
  -webkit-animation-fill-mode: both;
          animation-fill-mode: both;
}

@-webkit-keyframes nf-fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes nf-fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.mouseoff {
  display: none;
  transition: all 250ms ease-in-out;
  bottom: -100%;
}

.instagram-post {
  display: block;
  position: relative;
  overflow: hidden;
}

.instagram-post a .mouseoff {
  width: calc(100% - 0.25em);
  padding: 0.5em 0.75em 1.5em;
  max-height: calc(100% + 0.5em);
  position: absolute;
  background-color: rgba(255, 255, 255, 0.55);
  opacity: 0;
  color: #000;
}

.instagram-post a:hover .mouseoff, .instagram-post a:focus .mouseoff {
  background-color: rgab(#fff, 0.75);
  overflow: hidden;
  opacity: 1;
  bottom: -2em;
}

.instagram-post a:hover .mouseoff:hover:before, .instagram-post a:focus .mouseoff:hover:before {
  display: block;
  content: '';
  position: absolute;
  top: 75%;
  right: 0;
  bottom: 0;
  left: 0;
  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), #fff);
  opacity: 1;
  z-index: 100;
}

.instagram-post:last-child {
  display: none;
}

@media only screen and (min-width: 25em) {
  .mouseoff {
    display: block;
  }
}

@media only screen and (min-width: 38em) {
  .instagram-post:last-child {
    display: block;
  }
}

.clock-holder {
  text-align: center;
  background: url(../img/background-transp.png);
  font-family: sans-serif;
  font-weight: 100;
}

.clock-width {
  width: 100%;
  margin-top: 1.5em;
  position: relative;
  text-align: center;
}

.clock-inline {
  display: inline-block;
}

.clock-number {
  font-size: 2em;
}

.clock-smalltext {
  font-size: .65em;
}

#clockdiv {
  margin: 0 auto;
}

@media only screen and (min-width: 25em) {
  .clock-inline {
    padding: .5em;
  }
}

